--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>my-vue3-demo</title>
+    <link rel="stylesheet" href="<%= BASE_URL %>css/app-reset.css">
+    <title>vuecli3-init</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but my-vue3-demo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but vuecli3-init doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
